Add ban/tempban/unban/suicide/hat commands, and fix join msg